chatGPTレビュー反映: 表現を統一したりリズムを整えて読みやすくした

--- a/public/エンジニアとして働く中で気づけた大切だと思うこと.md
+++ b/public/エンジニアとして働く中で気づけた大切だと思うこと.md
@@ -20,7 +20,7 @@ ignorePublish: false
 
 未熟だった自分を振り返って、今では改善できた点が多くあると思います。同じ失敗を繰り返さないように、自分の経験が少しでも役立てば幸いです。
 
-また、気づきを与えてくれた方々にこの場を借りて感謝します。
+また、気付きを与えてくれた方々にこの場を借りて感謝します。
 
 # 感謝を忘れない
 
@@ -28,7 +28,7 @@ ignorePublish: false
 
 たとえば、昔の自分はバグ報告を受けるとろくに文章も読まず「影響範囲は？ 再現する条件は？ 原因は？ 解決策は？」などと質問攻めにしてしまっていました。
 報告しただけなのに色んなことを聞かれて答えなきゃいけないなんて、もう次からはバグ報告するのやめようと思わせてしまっていたかもしれません。
-今では「バグを見つけていただきありがとうございます。影響範囲を特定したいので、まず再現する条件を教えていただけませんか？」と感謝から始めるよう心がけています。感謝は、コミュニケーションのクッションにもなり得るので重宝します。
+今では「バグを見つけていただきありがとうございます。影響範囲を特定したいので、まず再現する条件を教えていただけませんか？」と感謝から始めるよう心がけています。感謝は、コミュニケーションのクッションになることもあるので重宝します。
 
 **感謝はきっと、自分にとっては過剰なくらいがちょうど良い**んだろうなと感じています。
 
@@ -90,13 +90,13 @@ timesでのぼやきに速攻で飛び付いて頓珍漢な返信をしたり、
 しかし、意見を大切にしてほしいと思っているのはきっと相手だって同じはずです。
 自分の主張によって、もしくは主張しないという自己表現をすることで、**相手がどう思うかを一瞬考えてからでもコミュニケーションは問題なく成立する**と気付くまで長い時間がかかりました。
 
-アサーティブなコミュニケーションという考え方に出会えたことで、自己主張を含む自己表現に対する考え方がかなり変わりました。まだまだ上手くできないことが多いですが、少しずつできることを増やしていきたいです。
+アサーティブなコミュニケーションという考え方に出会えたことで、自己表現に対する考え方が大きく変わりました。まだまだ上手くできないことが多いですが、少しずつできることを増やしていきたいです。
 
 # 定期的に内省する
 
 ビジネスシーンでは、設定した目標に近づけているか、次にとるべきアクションは何か、仕事を最適化していくために振り返りは重要とされています。それは自分の振る舞いに関しても当てはまると思います。
 
-スクラムのレトロスペクティヴでよく使われるKPTなどを参考にして、自分の良かったところ、良くなかったところを振り返り言語化します。ジョハリの窓で言う「盲点の窓」や「未知の窓」に位置していることに少しでも気付けることを目指します。つまりは自己理解です。
+スクラムのレトロスペクティヴでよく使われるKPTなどを参考にして、自分の良かったところ、良くなかったところを振り返り言語化します。ジョハリの窓で言う「盲点の窓」や「未知の窓」に位置していることに少しでも気付けるようにします。つまりは自己理解です。
 
 > - 【開放の窓】自分も、相手もよく知っている領域
 > - 【秘密の窓】自分は知っているが、相手には隠している領域
@@ -119,13 +119,13 @@ timesでのぼやきに速攻で飛び付いて頓珍漢な返信をしたり、
 今思うと、自分に原因があることばかりでしたし、仮に理不尽な状況に立たされても苛立ちを他の方に向けるのは迷惑極まりない行為だなと反省してます。
 自分にとって多すぎるタスクだって、会議準備や問い合わせだって、上司に相談したり、メンバーに依頼したりできたはずです。「他の人はできないから自分がやらなければならない。だから自分はこんなにも辛い。なんで自分だけがこんなに大変な思いをしなくちゃいけない。こんなに大変なのに、労いは少ないし見合う報酬だってない」と言ったように、他責思考のループが止まらなくなり抜け出すのが大変でした。自分の性格的に、イライラの原因が自分自身にあることが多いと気付けたのは大きかったです。
 
-苛立ちを覚えても、**まずは表に出さず自分の気持ちと向き合う**ようにしています。（これがなかなか難しいんです）
+苛立ちを覚えても、**まずは表に出さずに自分の気持ちと向き合う**ようにしています。（これがなかなか難しいんです）
 いったんその気持ちの原因を探り、自分自身の考え方や行動を変えれば済む話ならさっさと変わってしまいます。（これも難しいですが）
 相手の振る舞いが原因なら、一度改善をお願いしてみます。しかし他人をコントロールすることはできないので、無理な時は無理とさっさと諦めてしまうことを心がけています。（もちろんこれも簡単ではありません）
 
 # 全部自分でやらない
 
-何もかも自分でやりたい/やらなければいけないと思っていた時がありました。新しいツールを導入したり、会議で提案するための資料を作ったり、バグを見つけたら原因調査して修正したり。
+何もかも自分でやりたい/やらなければいけないと思っていた時がありました。新しいツールを導入したり、会議で提案するための資料を作ったり、バグを見つけたら原因調査して修正したりすることなど。
 
 確かに新たなことに挑戦して経験を積むのは良いことですが、デメリットも2点ありました。
 
